After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 688860 - Clearly label the message in Error presences as from the server
Clearly label the message in Error presences as from the server
Status: RESOLVED FIXED
Product: empathy
Classification: Core
Component: Contact List
3.6.x
Other Linux
: Normal normal
: ---
Assigned To: empathy-maint
empathy-maint
Depends on:
Blocks:
 
 
Reported: 2012-11-22 09:26 UTC by Will Thompson
Modified: 2012-12-26 08:48 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
roster-contact: prefix status msg in case of error (1.67 KB, patch)
2012-11-29 12:55 UTC, Guillaume Desmottes
committed Details | Review

Description Will Thompson 2012-11-22 09:26:44 UTC
Gabble, if it gets an error presence back from the server, uses the text of the message as the contact's presence string, along with type=Error. Empathy just blindly shows that.

Vincent filed https://bugs.freedesktop.org/show_bug.cgi?id=46753 on Gabble, and said:

> The error could possibly be prefixed with something like "Server cannot find contact: %s".
> 
> The issue is really that those strings aren't clear as to whether the issue is in my client, between my client and my server, or between my server and the server of my contact. Those strings, as they are right now, just tell the user "you got some random error".

The spec says: <http://telepathy.freedesktop.org/spec/Connection_Interface_Simple_Presence.html#Enum:Connection_Presence_Type>

> Error, an error occurred while trying to determine presence. The message, if set, is an error from the server.

So I think the prefix Vincent suggests would be reasonable.
Comment 1 Guillaume Desmottes 2012-11-29 12:55:47 UTC
Created attachment 230180 [details] [review]
roster-contact: prefix status msg in case of error
Comment 2 Guillaume Desmottes 2012-11-29 12:55:59 UTC
How does this look to you?
Comment 3 Vincent Untz 2012-12-05 09:40:25 UTC
Makes sense to me.
Comment 4 Guillaume Desmottes 2012-12-26 08:47:57 UTC
Attachment 230180 [details] pushed as 9c65427 - roster-contact: prefix status msg in case of error