roster-contact: prefix status msg in case of error

https://bugzilla.gnome.org/show_bug.cgi?id=688860